# opencv-miniprojects

./: .gitignore  README.md
body-parts-recognition/: README.md  body-parts.py  points_body_equivalents.md
green-screen/: README.md  green-screen.py
object-measurement/c-plus-plus/: CMakeLists.txt  Proyecto  README.md  main.cpp
